--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div id="container">
         <div class="banner">
-            Học liệu hỗ trợ phát âm bộ môn tiếng Anh
+            <p>Học liệu hỗ trợ phát âm bộ môn tiếng Anh</p>
+            <p>THCS Thanh Trì</p>
         </div>
         <div id="content"></div>
     </div>
