--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div class="banner">
             <p>Học liệu hỗ trợ phát âm bộ môn tiếng Anh</p>
-            <p>THCS Thanh Trì</p>
+            <p>Trung học cơ sở Thanh Trì</p>
         </div>
         <div id="content"></div>
     </div>
